<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Adsense Client</string>
    <string name="preferences">Preferences</string>
    <string name="refresh">Refresh</string>
		<string name="adsense_data_service_started">Adsense Data Collection Service has been started</string>
		<string name="adsense_data_service_stopped">Adsense Data Collection Service has been stopped</string>
		<string name="adsense_data_service_label">Adsense Data Collection Service</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last7days">Last 7 Days</string>
    <string name="thismonth">This Month</string>
    <string name="lastmonth">Last Month</string>
    <string name="alltime">All Time</string>
		<string name="tutorial">Tutorial</string>
	  <string name="add_account">Add Adsense Account</string>
	  <string name="website">www.humbug.in</string>
		<string name="app_description">Light-Weight Adsense Client for Android™</string>
		<string name="account_setup_basics_email_hint">Adsense Email Address</string>
		<string name="account_setup_basics_password_hint">Adsense Password</string>
		<string name="accounts_welcome">Enter the username and password for your Google Adsense account. Account Information is only sent to Google, and is only transmitted over a secure connection.</string>
		<string name="next_action">Next</string>
		<string name="validating">Validating Adsense Settings</string>
		<string name="account_setup_failed_dlg_title">Setup could not finish</string>
		<string name="account_setup_failed_dlg_edit_details_action">Edit details</string>
		<string name="account_setup_failed_retry">Retry</string>
		<string name="dialog_title_preference_frequency">Update Frequency</string>
	  <string name="summary_preference_automatic_updates">Change automatic update settings</string>
 		<string name="summary_preference_automatic_updates_off">Automatic updates are disabled</string>
	  <string name="summary_preference_automatic_updates_on">Automatic updates are enabled</string>
		<string name="summary_preference_frequency">Updates are fetched every {0}.</string>
		<string name="category_title_preference_automatic_updates">Updates</string>
		<string name="title_preference_automatic_updates">Automatic Updates</string>
		<string name="title_preference_frequency">Update Frequency</string>	
		<string name="dialog_title_preference_theme_type">Themes</string>
		<string name="title_preference_theme_type">Themes</string>
		<string name="summary_preference_theme_type">Theme {0} is active</string>
</resources>
