<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="#FFFFFFFF"
	android:gravity="center">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="1"
		android:gravity="center" android:orientation="vertical" android:id="@+id/splash_container">
		<ImageView android:src="@drawable/money"
			android:layout_height="wrap_content" android:layout_gravity="center"
			android:layout_width="wrap_content" android:id="@+id/money"
			android:focusable="false" android:focusableInTouchMode="false"></ImageView>
		<TextView android:layout_height="wrap_content"
			android:gravity="center_horizontal" android:typeface="sans"
			android:text="@string/app_description" android:textSize="5pt"
			android:layout_marginBottom="12dip" android:id="@+id/app_description"
			android:layout_width="fill_parent" android:focusable="false"
			android:focusableInTouchMode="false"></TextView>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textSize="5pt"
			android:id="@+id/website" android:text="@string/website"
			android:textColor="#ff62a52a"></TextView>
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:gravity="center" android:paddingBottom="8dip"
		android:paddingTop="12dip" android:layout_height="wrap_content"
		android:background="#099A22">
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:paddingLeft="20dip"
			android:paddingRight="20dip" android:id="@+id/button_add_account"
			android:text="@string/add_account"></Button>
	</LinearLayout>
</LinearLayout>
